attempt 3 at fixing image not showing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url('../images/background.jpg');
+    background-image: url('https://peoriaparks.org/wp-content/uploads/2017/12/BookCourt_iStock-690358116-e1515177346323.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-family: 'Roboto', sans-serif;
